--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -44,9 +44,7 @@
         android:id="@+id/current_user_profile_image"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:src="@android:drawable/ic_menu_camera"
-        app:civ_border_color="@color/design_default_color_primary"
-        app:civ_border_width="@dimen/_2sdp"
+        android:src="@drawable/user_icon"
         app:layout_constraintBottom_toTopOf="@+id/rigester_button"
         app:layout_constraintEnd_toEndOf="@+id/description"
         app:layout_constraintStart_toStartOf="@+id/description"
