--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -11,12 +11,13 @@
         android:id="@+id/users_RV"
 
         />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="93dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_8sdp"
-        android:layout_gravity="bottom|end"
         android:orientation="vertical">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -24,48 +25,50 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:clickable="true"
-            android:focusable="true"
-            app:fab_size="mini"
-            android:visibility="invisible"
             android:layout_marginBottom="@dimen/_6sdp"
+            android:clickable="true"
+            android:contentDescription="@string/add_chat"
+            android:focusable="true"
             android:src="@drawable/ic_baseline_group_add_24"
-            android:contentDescription="@string/add_chat" />
+            android:visibility="invisible"
+            app:fab_size="mini" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:clickable="true"
-            android:focusable="true"
-            app:fab_size="mini"
-            android:visibility="invisible"
             android:layout_marginBottom="@dimen/_6sdp"
+            android:clickable="true"
+            android:contentDescription="@string/add_chat"
+            android:focusable="true"
             android:src="@drawable/ic_baseline_add_24"
-            android:contentDescription="@string/add_chat" />
+            android:visibility="invisible"
+            app:fab_size="mini" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_existing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_size="mini"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/_8sdp"
             android:clickable="true"
+            android:contentDescription="@string/add_chat"
             android:focusable="true"
             android:visibility="invisible"
 
-            app:srcCompat="@drawable/ic_baseline_person_add_24"
-            android:contentDescription="@string/add_chat" />
+            app:fab_size="mini"
+            app:srcCompat="@drawable/ic_baseline_person_add_24" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
             android:id="@+id/add_fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_24"
-            android:layout_marginBottom="@dimen/_12sdp"
-            android:elevation="@dimen/_8sdp"
             android:layout_gravity="center"
-            android:contentDescription="@string/open_add" />
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:contentDescription="@string/open_add"
+            android:elevation="@dimen/_8sdp"
+            android:src="@drawable/ic_baseline_add_24" />
 
     </LinearLayout>
 
