--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.MyApplicationTheme">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/md_theme_light_primaryInverse"
+        android:visibility="invisible"
+        app:layout_constraintVertical_bias="0.03"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,72 +30,48 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/phoneEditText"
+            android:id="@+id/editTextPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/phone"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:paddingLeft="20dp"
+            android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:background="@drawable/custom_edit_text"/>
+            android:paddingRight="20dp"
+            android:background="@drawable/round_back_white"/>
         <Button
-            android:id="@+id/generateOTPButton"
+            android:id="@+id/buttonGenerateOTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/generateOTP"
             android:layout_margin="20dp"
-            android:background="@drawable/round_back_secondary"/>
+            android:background="@drawable/round_back_secondary" />
 
         <EditText
-            android:id="@+id/OTPEditText"
+            android:id="@+id/editTextOTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:hint="@string/OTP"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
-            android:background="@drawable/custom_edit_text"/>
+            android:paddingBottom="10dp"
+            android:paddingRight="20dp"
+            android:background="@drawable/round_back_white"/>
 
         <Button
-            android:id="@+id/verifyOTPButton"
+            android:id="@+id/buttonVerifyOTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/verifyOTP"
-            android:layout_margin="20dp"
-            android:background="@drawable/round_back_secondary"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/round_back_secondary"
+            android:enabled="false"/>
+
 
     </LinearLayout>
-    <!--    <EditText-->
-    <!--        android:id="@+id/phoneEditText"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintWidth_percent="0.8"-->
-    <!--        app:layout_constraintVertical_bias="0.3"-->
-    <!--        app:layout_constraintHorizontal_bias="0.5"-->
-    <!--        android:hint="@string/phone"-->
-    <!--        android:paddingLeft="20dp"-->
-    <!--        android:paddingTop="10dp"-->
-    <!--        android:paddingButtom="10dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"/>-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/OTP"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:hint="@string/OTP"-->
-    <!--        android:paddingLeft="20dp"-->
-    <!--        android:paddingTop="10dp"-->
-    <!--        android:paddingButtom="10dp"-->
-    <!--        app:layout_constraintVertical_bias="0"-->
-    <!--        android:layout_marginTop="20dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.5"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:layout_constraintWidth_percent="0.8" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
