--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorPrimary">@color/md_theme_light_primary</item>
+        <item name="colorPrimary">@color/md_theme_light_primaryInverse</item>
         <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
         <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
@@ -35,12 +35,18 @@
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.MyApplicationTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/md_theme_light_primaryInverse</item>
+
+    </style>
     
     <style name="nightModeSwitch" parent="Theme.AppCompat.Light">
         <item name="colorControlActivated">@color/md_theme_light_inversePrimary</item>
         <item name="colorSwitchThumbNormal">#ffffff</item>
         <item name="android:colorForeground">#99FFFFFF</item>
     </style>
+
 
     <style name="Theme.MyApplication.NoActionBar">
         <item name="windowActionBar">false</item>
