--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -40,6 +40,7 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
+            android:inputType="phone"
             android:background="@drawable/round_back_white"/>
         <Button
             android:id="@+id/buttonGenerateOTP"
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:hint="@string/OTP"
+            android:inputType="number"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
