--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,6 +6,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
+        <item name="colorAccent">#03dac5</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
         <item name="colorOnPrimaryContainer">@color/md_theme_dark_onPrimaryContainer</item>
