--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,10 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.Material3.Dark">
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/md_theme_dark_onPrimary</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorPrimary">@color/md_theme_dark_primary</item>
+        <item name="colorPrimary">@color/md_theme_light_primary</item>
         <item name="colorAccent">#03dac5</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
