--- a/app/src/main/res/layout/activity_add_image.xml
+++ b/app/src/main/res/layout/activity_add_image.xml
@@ -18,17 +18,17 @@
     <EditText
         android:id="@+id/Idescription"
         android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="24dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginStart="@dimen/_6sdp"
+        android:layout_marginEnd="@dimen/_6sdp"
+        android:layout_marginBottom="@dimen/_18sdp"
         android:background="@drawable/grey_btn"
         android:ems="10"
         android:hint="Description"
         android:paddingLeft="@dimen/_12sdp"
         android:paddingRight="@dimen/_12sdp"
-        android:textColor="@color/gray"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_14sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/addImageStoryToFireBase"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_12sdp"
         app:tint="@color/design_default_color_on_primary"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/_18sdp"
         android:src="@drawable/ic_baseline_send_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
