made users deletable.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#03000000"
-    tools:context="com.example.myapplication.ui.main.ProfileActivity">
+    >
 
 
     <ProgressBar
@@ -49,6 +49,8 @@
         android:layout_height="100dp"
         android:layout_marginTop="52dp"
         android:background="@color/white"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,20 +131,31 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:lines="4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/bioText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/_15sdp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:background="@android:color/transparent"
+            android:enabled="false"
+            android:gravity="top|start"
             android:imeOptions="actionDone"
             android:inputType="text"
+            android:lines="3"
+            android:maxLines="10"
+            android:minLines="1"
+            android:scrollbars="vertical"
+            android:singleLine="false"
             android:text=""
-            android:textSize="17dp"
+            android:textSize="@dimen/_13ssp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
